examples/dataload/dataload-istio-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dataload-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "dataload.ingress.istio"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dataload-virtual
spec:
  hosts:
  - "dataload.ingress.istio"
  gateways:
  - dataload-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: dataload-svc
    corsPolicy:
      allowOrigins:
      - exact: http://localhost:3000
      allowMethods:
      - POST
      - GET
      - DELETE
      allowHeaders:
      - Authorization
      - Content-Type
      exposeHeaders:
      - Authorization
      maxAge: 24h
      allowCredentials: false
