examples/dataload/istio-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: acp-authorizer
  namespace: default
spec:
  action: CUSTOM
  provider:
    name: acp-authorizer
  rules:
  - to:
    - operation:
        paths:
        - /datasets
